--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -2,7 +2,7 @@ name: flutter_umengplus
 description: A new flutter plugin project.
 version: 0.0.1
 author:
-homepage:
+homepage: https
 
 environment:
   sdk: ">=2.1.0 <3.0.0"
